--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,26 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+## **What is Semaphor?**
 
-## What is Nextra?
+**Semaphor** is a state-of-the-art integrated analytics solution designed to seamlessly blend with your apps, providing real-time data insights directly to your users. With this approach, you can deliver insights and analytics capabilities to your end users and decision-makers right through your app itself, eliminating the need for them to learn and use a separate BI tool.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Semaphor offers a suite of analytics experiences, including customizable dashboards, clean rooms, and natural-language powered analytics, all designed to be integrated within your existing software applications. Whether you're looking to enhance a SaaS product, or an internal business application, Semaphor provides the capabilities you need to turn your data into actionable insights.
 
-## Documentation
+### **Key Benefits**
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+- **Deep Customization:** We offer interactive dashboards that can be fully customized to align with your company's style and brand — making them indistinguishable from your app.
+- **Real-time Data Processing:** We provide real-time insights, and we can be as real-time as your data allows. We treat data from APIs and databases equally.
+- **Dashboard-as-code:** Our approach allows you to manage dashboards in the same way you manage code. This enables version control, review, testing, and automated deployments, just like any other software. Your dashboards are secure, version-controlled, and consistently backed up.
+- **Dynamic Drill-downs:** Our single-click zoom feature minimizes the need to create top-level filters, enhancing user experience.
+- **Hide Nothing Architecture**: Gain complete transparency into how a specific insight was generated. Experience simplicity and expressiveness with in-line filters. Say goodbye to old-guard black-box dashboards.
+
+### **Use Cases**
+
+Semphor capabilities are versatile and can be applied across a variety of industries and use cases, including:
+
+- **SaaS Products:** Enhance your software as a service (SaaS) products by integrating powerful analytics features, enabling your customers to make data-driven decisions.
+- **E-Commerce Platforms:** Understand customer behavior, track sales trends, and optimize inventory management through embedded analytics in your e-commerce platform.
+- **Financial Services:** Offer personalized financial insights to users by embedding analytics in banking and financial management applications.
+- **Healthcare Applications:** Improve patient care and operational efficiency by integrating analytics into healthcare applications, enabling real-time insights into patient data and trends.
+
+### **Getting Started**
+
+Embark on your journey to deliver meaningful data signals with Semaphor. Our solution is designed to be intuitive and easy to integrate, allowing you to quickly add value to your applications. Get started today and delight your end users.
