added working code

--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,6 +1,6 @@
 ## **Getting Started with Semaphor**
 
-Follow these simple steps to start transforming your data into actionable insights.
+Follow these simple steps.
 
 ### **Step 1: Sign Up and Log In**
 
@@ -17,7 +17,7 @@ Follow these simple steps to start transforming your data into actionable insigh
 5. **Test Connection:** Click on the "Test" button to verify everything is set up correctly.
 6. **Save Connection:** If the connection is successful, save it to link to your dashboards.
 
-### **Step 3: Build Insights**
+### **Step 3: Generate Insights**
 
 1. **Create a Dashboard:** Click on "Create Dashboard" in the projects section. A dashboard is a canvas for displaying your insights.
 2. **Add Card:** Each card represents a piece of insight, such as a chart or a table. Open the explorer view by clicking on the eye icon.
