--- a/pages/integrate.mdx
+++ b/pages/integrate.mdx
@@ -1,128 +1,117 @@
-## **Integrate into you app**
+## Integrate into your app
 
 Integrating your dashboard into your app is a straightforward three-step process.
 
-### **1) Install Semaphor Package**
+#### **1) Install Semaphor Package**
 
-Open your terminal in your project directory and run the following command. This command installs the **`react-semaphor`** package and adds it to your project dependencies.
+Open your terminal in your project directory and run the following command. This command installs the `react-semaphor` package and adds it to your project dependencies.
 
-```markdown copy
+```markdown
 npm i react-semaphor
 ```
 
-### **2) Get Auth Token**
+#### **2) Get Auth Token**
 
 Before rendering the `Dashboard`, first acquire the `AuthToken`. This token enhances the security of your dashboard by restricting access to only users with the token. Make a simple fetch call as shown below.
 
-```jsx copy {2-3}
-const fetchAuthToken = async () => {
-  const dashboard_id = 'your-dashboard-id'; // Replace with your actual dashboard ID
-  const dashboard_secret = 'your-dashboard-secret'; // Replace with your actual dashboard secret
+```jsx {1-3} copy
+const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86'; // Replace with your actual dashboard ID
+const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635'; // Replace with your actual dashboard secret
+const TOKEN_URL = 'https://semaphor.cloud/api/v1/token';
 
-  const response = await fetch('<https://semaphor.cloud/v1/token>', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({
-      dashboard_id,
-      dashboard_secret,
-    }),
-  });
+async function getToken() {
+  const url = new URL(TOKEN_URL);
+  url.searchParams.append('dashboardId', DASHBOARD_ID);
+  url.searchParams.append('dashboardSecret', DASHBOARD_SECRET);
 
-  if (!response.ok) {
-    console.error('Failed to fetch auth token');
-    return;
+  try {
+    const response = await fetch(url);
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const token = await response.json();
+    if (token?.accessToken) {
+      setAuthToken(token);
+    }
+  } catch (error) {
+    console.error('There was an error!', error);
   }
-
-  const token = await response.json();
-  setAuthToken(token);
-};
+}
 ```
 
-### **3) Initialize Dashboard**
+#### **3) Initialize Dashboard**
 
-Below is a simple example of a React component that demonstrates how to use the **`Dashboard`** component from the **`react-semaphor`** package.
+Below is a simple example of a React component that demonstrates how to use the `Dashboard` component from the `react-semaphor` package.
 
-```jsx {7-10} copy
-import React from 'react';
-import { Dashboard } from 'react-semaphor';
+```tsx {2-3} copy
+import { useEffect, useState } from 'react';
+import { AuthToken, Dashboard } from 'react-semaphor';
+import '../node_modules/react-semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
 
-const AnalyticsDashboard = () => {
+function App() {
+  const [authToken, setAuthToken] = useState<AuthToken>();
+
   return (
     <div>
-      <Dashboard
-        authToken={authToken}
-        dashboardId="your-dashboard-id" // Replace with your actual dashboard ID
-      />
+      <h2>My cool dashboard</h2>
+      <Dashboard authToken={authToken} id={DASHBOARD_ID} />
     </div>
   );
-};
-
-export default AnalyticsDashboard;
+}
 ```
 
-### Full Code:
+### **Full Code**
 
 Here is the complete code that uses the above steps. You can copy and paste this simple example into your own application.
 
-```jsx
-import React, { useState, useEffect } from 'react';
-import { Dashboard } from 'react-semaphor';
+```tsx copy
+import { useEffect, useState } from 'react';
+import { AuthToken, Dashboard } from 'react-semaphor';
+import '../node_modules/react-semaphor/dist/style.css'; // IMPORTANT! Include the CSS file.
 
-const AnalyticsDashboard = () => {
-  const [authToken, setAuthToken] = useState('');
+const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86'; // Replace with your actual dashboard ID
+const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635'; // Replace with your actual dashboard secret
+const TOKEN_URL = 'https://semaphor.cloud/api/v1/token';
+
+function App() {
+  const [authToken, setAuthToken] = useState<AuthToken>();
 
   useEffect(() => {
-    const fetchAuthToken = async () => {
-      const dashboardId = 'your-dashboard-id'; // Replace with your actual dashboard ID
-      const dashboardSecret = 'your-dashboard-secret'; // Replace with your actual dashboard secret
+    async function getToken() {
+      const url = new URL(TOKEN_URL);
+      url.searchParams.append('dashboardId', DASHBOARD_ID);
+      url.searchParams.append('dashboardSecret', DASHBOARD_SECRET);
 
-      const response = await fetch('<https://semaphor.cloud/v1/token>', {
-        // Replace with your actual auth service URL
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({
-          dashboardId,
-          dashboardSecret,
-        }),
-      });
+      try {
+        const response = await fetch(url);
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
 
-      if (!response.ok) {
-        // Handle response error
-        console.error('Failed to fetch auth token');
-        return;
+        const token = await response.json();
+        if (token?.accessToken) {
+          setAuthToken(token);
+        }
+      } catch (error) {
+        console.error('There was an error!', error);
       }
-
-      const data = await response.json();
-      setAuthToken(data.authToken); // Ensure the response contains authToken
-    };
-
-    fetchAuthToken();
+    }
+    getToken();
   }, []);
 
   return (
     <div>
-      <h2>My Cool Dashboard</h2>
-      {authToken ? (
-        <Dashboard
-          dashboardId="your-dashboard-id" // Replace with your actual dashboard ID
-          AuthToken={authToken} // Pass the fetched AuthToken here
-        />
-      ) : (
-        <p>Loading...</p> // Display loading text or spinner while fetching AuthToken
-      )}
+      <h2>My cool dashboard</h2>
+      <Dashboard authToken={authToken} id={DASHBOARD_ID} />
     </div>
   );
-};
+}
 
-export default AnalyticsDashboard;
+export default App;
 ```
 
-### **Key Considerations:**
+### **Key Considerations**
 
-- **Security Note:** Keep the **`DashboardSecret`** secure and do not expose it in client-side code in production. This example is for demonstration purposes. In a real-world application, the authentication token should be fetched from a secure, server-side environment.
-- **Fetching the AuthToken:** Before the dashboard can be displayed, an authentication token must be fetched. The **`useEffect`** hook is used to perform this action when the component mounts.
-- **Conditional Rendering:** The **`Dashboard`** component is rendered only after the **`AuthToken`** has been fetched, displaying a loading message in the meantime. This ensures that the component attempts to render the dashboard only when all necessary data is available.
+- **Security Note:** Keep the `DASHBOARD_SECRET` secure and do not expose it in client-side code in production. This example is for demonstration purposes only. When deploying in production, obtain the authentication token from a secure, server-side environment.
+- **Fetching the AuthToken:** Before the dashboard can be displayed, an authentication token must be fetched. The `useEffect` hook is used to perform this action when the component mounts.
