changes to the copy.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,8 +6,8 @@ Semaphor offers a suite of analytics experiences, including fully customizable d
 
 ### **Key Benefits**
 
-- **Deep Customization:** Interactive dashboards that can be styled to match your company's brand — making them indistinguishable from your application.
-- **Real-time Insights:** Designed to operate at the speed of your business, and we can be as real-time as your data gets. We treat data from APIs and databases equally.
+- **Deep Customization:** Experience fully interactive dashboards that perfectly styled to match your company's brand and aesthetics — making them indistinguishable from your application.
+- **Real-time Insights:** Operate at the speed of your business, and we can be as real-time as your data gets. We treat data from APIs and databases equally.
 - **Dashboard-as-code:** Manage dashboards in the same way you manage code. Perform version control, reviews, testing, and automated deployments, just like any other software. Your dashboards are secure, version-controlled, and consistently backed up.
 - **Hide Nothing Architecture**: Gain complete transparency into how a specific insight was generated. Experience simplicity and expressiveness with in-line filters. Say goodbye to old-guard black-box dashboards.
 
