--- a/pages/integrate.mdx
+++ b/pages/integrate.mdx
@@ -1,4 +1,4 @@
-## Integrate into your app
+## **Integrate into your app**
 
 Integrating your dashboard into your app is a straightforward three-step process.
 
@@ -63,7 +63,7 @@ function App() {
 
 ### **Full Code**
 
-Here is the complete code that uses the above steps. You can copy and paste this simple example into your own application.
+Here is the complete React code that uses the above steps. You can copy and paste this example into your own application.
 
 ```tsx copy
 import { useEffect, useState } from 'react';
