--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -22,7 +22,7 @@ You can get started with Semaphor in three simple steps.
 1. **Create a Dashboard:** Click on "Create Dashboard" in the projects section. A dashboard is a canvas for displaying your insights.
 2. **Add Card:** Each card represents a piece of insight, such as a chart or a table. Open the explorer view by clicking on the eye icon.
 3. **Select Data:** Select the data you want to analyze from your previously created connection.
-4. **Ask question:** Ask questions of your data or write your own SQL, and pick the type of visualization (e.g., bar chart, line graph, pie chart) that best illustrates your data.
+4. **Analyze:** Ask questions of your data or write your own SQL, and pick the type of visualization (e.g., bar chart, line graph, pie chart) that best illustrates your data.
 5. **Customize Your Dashboard:** Modify your report by adding filters, sorting data, and adjusting the layout.
 6. **Save and Share:** Save your dashboard and share it with your team or integrate it into your application.
 
