--- a/pages/integrate.mdx
+++ b/pages/integrate.mdx
@@ -1,4 +1,4 @@
-## **Integrate into your app**
+## **Integrate Dashboard**
 
 Integrating your dashboard into your app is a straightforward three-step process.
 
