changed the language.

--- a/pages/integrate/web-component.mdx
+++ b/pages/integrate/web-component.mdx
@@ -88,7 +88,7 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 ```
 
-### **3) Reference Web Component in HTML**
+### **3) Add Web Component to HTML**
 
 And finally, let's add the following three lines to the `index.html` file as below:
 
