added styles documentation

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,4 +22,4 @@ Semphor capabilities are versatile and can be applied across a variety of indust
 
 ### **Getting Started**
 
-Begin your journey to deliver data signals with Semaphor. It is designed to be straightforward and easy to integrate, enabling you to rapidly enhance your applications. [Get started](/getting-started) today and delight your end users.
+Begin your journey to deliver data signals with Semaphor. It is designed to be straightforward and easy to integrate, enabling you to rapidly enhance your applications. [Get started](/getting-started) today and start delighting your end users.
