--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,15 +1,14 @@
 ## **What is Semaphor?**
 
-Semaphor is a fully customizable analytics solution that you can seamlessly integrate into your data apps. It is designed with utmost flexibility to ensure it fits perfectly into your design, styling, and functional needs. Semaphor offers a dynamic approach to analytics and data visualization. It not only caters to the needs of data-savvy users but also provides an environment where business users can dive in and find insights themselves. Semaphor does more than just display dashboards; it brings them to life through interactive visualizations and real-time analytics, taking the user experience to a whole new level.
+- Semaphor is a fully customizable analytics solution that integrates seamlessly into your web apps. It's designed for maximum flexibility, meeting your design, styling, and functionality needs. Semaphor's dynamic approach to analytics and data visualization caters to both data-savvy and business users, providing an environment for easy data exploration and insight.
 
-Semaphor offers a suite of analytics experiences, including fully customizable dashboards, clean rooms, and natural-language powered analytics, all designed to be accessed through your existing software applications. Whether you're looking to enhance a SaaS product, or an internal business application, Semaphor provides comprehensive capabilities to turn your data into actionable insights.
+  Semaphor goes beyond dashboard displays; it offers a suite of analytics experiences. These include fully customizable dashboards, clean rooms, and natural-language powered analytics, all accessible through your existing software applications. Whether you aim to enhance a SaaS product or an internal business application, Semaphor equips you with the tools to convert data into actionable insights. We offer:
 
-### **Key Benefits**
-
-- **Deep Customization:** Experience fully interactive dashboards that perfectly styled to match your company's brand and aesthetics — making them indistinguishable from your application.
-- **Real-time Insights:** Operate at the speed of your business, and we can be as real-time as your data gets. We treat data from APIs and databases equally.
-- **Dashboard-as-code:** Manage dashboards in the same way you manage code. Perform version control, reviews, testing, and automated deployments, just like any other software. Your dashboards are secure, version-controlled, and consistently backed up.
-- **Hide Nothing Architecture**: Gain complete transparency into how a specific insight was generated. Experience simplicity and expressiveness with in-line filters. Say goodbye to black-box dashboards.
+  - **Deep Customization**: Interact with dashboards that can be styled to align with your company's brand and aesthetics, making them indistinguishable from your apps.
+  - **Real-time Insights**: Operate at your business speed. We can deliver real-time insights as fast as your data comes in, treating data from APIs and databases equally.
+  - **Dashboard-as-code**: Manage dashboards as you would code. Execute version control, reviews, testing, and automated deployments. Your dashboards are secure, version-controlled, and consistently backed up.
+  - **Modern Web Standards**: Render insights into your app using native Web Components or as React Components. Say goodbye to clunky Iframes!
+  - **Hide Nothing Architecture**: Experience complete transparency in how specific insights are generated. Enjoy simplicity and expressiveness with in-line filters. No more black-box dashboards.
 
 ### **Use Cases**
 
