doc verbiage change.

--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -47,7 +47,7 @@ async function fetchToken() {
 
 ### **3) Initialize Dashboard**
 
-Here is a simple example of a React component that demonstrates how to use the `Dashboard` component from the `semaphor` package.
+Here is a simple example of a React component that demonstrates how to use the `Dashboard` component from the `semaphor` package. Make sure you import style.css either at the beginning of your component or in your global CSS file. This step is necessary for correctly loading your dashboard styles.
 
 ```tsx copy {3, 11}
 import { useEffect, useState } from 'react';
