--- a/pages/integrate/web-component.mdx
+++ b/pages/integrate/web-component.mdx
@@ -90,7 +90,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 And finally, let's add the following three lines to the `index.html` file as below:
 
-- **Styles** `<link rel="stylesheet" href="./node_modules/semaphor/dist/style.css" />` initalizes the styles. This is IMPORTANT.
+- **Styles** `<link rel="stylesheet" href="./node_modules/semaphor/dist/style.css" />` initalizes the styles. This is IMPORTANT for your dashboard styles to load properly.
 - **Web Component** `<semaphor-dashboard id="d_cf007a8b-19bc-46ad-8787-2915445b7b86" />` is the web component that renders the dashbaord,
 - **Token** `<script type="module" src="./dashboard.js"></script>` references the code fetches the `AuthToken`.
 
