--- a/pages/styles.mdx
+++ b/pages/styles.mdx
@@ -172,6 +172,6 @@ export const DEFAULT_STYLE: TStyle = {
 
 ### **Chart Options**
 
-Semaphore utilizes [Chart.js](https://www.chartjs.org/docs/latest/samples/bar/border-radius.html) as its visualization library, offering complete flexibility to customize every aspect of your chart. You can override the **`options`** property of the chart and set global properties for your dashboard. Alternatively, you can customize individual cards when creating the dashboard. The properties set for individual cards are more specific and override the global properties.
+Semaphore uses [Chart.js](https://www.chartjs.org/docs/latest/samples/bar/border-radius.html) for data visualization, offering complete flexibility to customize every aspect of your chart. You can override the **`options`** property of the chart and set global properties for your dashboard. Alternatively, you can customize individual cards when creating the dashboard. The properties set for individual cards are more specific and override the global properties.
 
 You can refer to various chart types in the above link. It demonstrates how using options provides a declarative approach to your visualization experience.
