--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,7 @@
 
 Semaphor is a fully customizable analytics solution that integrates seamlessly into your web apps. It's designed for maximum flexibility, meeting your design, styling, and functionality needs. Semaphor's dynamic approach to analytics and data visualization caters to both data-savvy and business users, providing an environment for easy data exploration and insight.
 
-Semaphor goes beyond dashboard displays; it offers a suite of analytics experiences. These include fully customizable dashboards, clean rooms, and natural-language powered analytics, all accessible through your existing software applications. Whether you aim to enhance a SaaS product or an internal business application, Semaphor equips you with the tools to convert data into actionable insights. We offer:
+Semaphor goes beyond dashboard displays; it offers a suite of analytics experiences. These include fully customizable dashboards, surfboards, and natural-language powered analytics, all accessible through your existing software applications. Whether you aim to enhance a SaaS product or an internal business application, Semaphor equips you with the tools to convert data into actionable insights. We offer:
 
 - **Deep Customization**: Interact with dashboards that can be styled to align with your company's brand and aesthetics, making them indistinguishable from your apps.
 - **Real-time Insights**: Operate at your business speed. We can deliver real-time insights as fast as your data comes in, treating data from APIs and databases equally.
