npm run dev added.

--- a/pages/integrate/web-component.mdx
+++ b/pages/integrate/web-component.mdx
@@ -112,6 +112,12 @@ And finally, let's add the following three lines to the `index.html` file as bel
 </html>
 ```
 
+That's all. Type the following command in your terminal window to run the app.
+
+``` markdown copy
+ npm run dev
+```
+
 ### **Key Considerations**
 
 - **Security:** Embedding secrets directly in your frontend code is not recommended. This example is for illustration purposes only, and assumes the `DASHBOARD_SECRET` is safe to expose (public dashboards), but, secrets should not be accessible on the client side. You might need a server-side solution to handle authentication securely.
