--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -1,6 +1,6 @@
 ## **React Component**
 
-Integrating dashboard into your React app is a straightforward three-step process.
+Integrating dashboard into your React app is a quick three-step process.
 
 ### **1) Install Semaphor Package**
 
