--- a/pages/integrate/vue-integration.mdx
+++ b/pages/integrate/vue-integration.mdx
@@ -1,6 +1,6 @@
 ## **Vue Integration**
 
-Integrating dashboard into your Vue app is a three-step process.
+This guide provides step-by-step instructions for integrating semaphor dashboard into your Vue app. In this example, we will use Vite to bootstrap our Vue application.
 
 ### **1) Setup**
 
