--- a/pages/integrate/vue-integration.mdx
+++ b/pages/integrate/vue-integration.mdx
@@ -4,7 +4,7 @@ This guide provides step-by-step instructions for integrating semaphor dashboard
 
 ### **1) Setup**
 
-**a)** Create a new Vue app with Vite. See the official Vite [documentation](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) for more details.
+**a)** Create a new Vue app with Vite. Refer to the [documentation](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) for more details.
 
 ```markdown copy
 npm create vite@latest vue-semaphor-app -- --template vue-ts
