--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -1,6 +1,6 @@
 ## **React Component**
 
-This guide offers step-by-step instructions on how to integrate the Semaphore dashboard into your React app. We're assuming that you already have a React application set up. If not, you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your React app.
+This guide offers step-by-step instructions on how to integrate the Semaphor dashboard into your React app. We're assuming that you already have a React application set up. If not, you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your React app.
 
 ### **1) Install Semaphor Package**
 
