added filter docs

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-## **What is Semaphor?**
+## What is Semaphor?
 
 Semaphor is a fully customizable analytics solution that integrates seamlessly into your web apps. It's designed for maximum flexibility, meeting your design, styling, and functionality needs. Semaphor's dynamic approach to analytics and data visualization caters to both data-savvy and business users, providing an environment for easy data exploration and insight.
 
@@ -10,7 +10,9 @@ Semaphor goes beyond dashboard displays; it offers a suite of analytics experien
 - **Modern Web Standards**: Render insights into your app using native Web Components or as React Components. Say goodbye to clunky Iframes!
 - **Hide Nothing Architecture**: Experience complete transparency in how specific insights are generated. Enjoy simplicity and expressiveness with in-line filters. No more black-box dashboards.
 
-### **Use Cases**
+---
+
+### Use Cases
 
 Semphor capabilities are versatile and can be applied across a variety of industries and use cases, including:
 
@@ -19,6 +21,8 @@ Semphor capabilities are versatile and can be applied across a variety of indust
 - **Financial Services:** Offer personalized financial insights to users by embedding analytics in banking and financial management applications.
 - **Healthcare Applications:** Improve patient care and operational efficiency by integrating analytics into healthcare applications, enabling real-time insights into patient data and trends.
 
-### **Getting Started**
+---
+
+### Getting Started
 
 Begin your journey to deliver data signals with Semaphor. It is designed to be straightforward and easy to integrate, enabling you to rapidly enhance your applications. [Get started](/getting-started) today and start delighting your end users.
