--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -1,8 +1,8 @@
-## **React Component**
+## React Component
 
 This guide offers step-by-step instructions on how to integrate the Semaphor dashboard into your React app. We're assuming that you already have a React application set up. If not, you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your React app.
 
-### **1) Install Semaphor Package**
+### 1) Install Semaphor Package
 
 Open your terminal in your project directory and run the following command. This command installs the `semaphor` package and adds it to your project dependencies.
 
@@ -10,7 +10,9 @@ Open your terminal in your project directory and run the following command. This
 npm i semaphor
 ```
 
-### **2) Get Auth Token**
+---
+
+### 2) Get Auth Token
 
 Before rendering the `Dashboard`, first acquire the `AuthToken`. This token enhances the security of your dashboard by restricting access to only users with the token. Make a POST fetch call as shown below.
 
@@ -45,7 +47,9 @@ async function fetchToken() {
 }
 ```
 
-### **3) Initialize Dashboard**
+---
+
+### 3) Initialize Dashboard
 
 Here is a simple example of a React component that demonstrates how to use the `Dashboard` component from the `semaphor` package. Make sure you import style.css either at the beginning of your component or in your global CSS file. This step is necessary for correctly loading your dashboard styles.
 
@@ -66,7 +70,9 @@ function App() {
 }
 ```
 
-### **Full Code**
+---
+
+### Full Code
 
 Here is the complete React code that uses the above steps. You can copy and paste this example into your own application.
 
@@ -121,7 +127,9 @@ function App() {
 export default App;
 ```
 
-### **Key Considerations**
+---
+
+### Key Considerations
 
 - **Security Note:** Keep the `DASHBOARD_SECRET` secure and do not expose it in client-side code in production. This example is for demonstration purposes only. When deploying in production, obtain the authentication token from a secure, server-side environment.
 - **Fetching the AuthToken:** Before the dashboard can be displayed, an authentication token must be fetched. The `useEffect` hook is used to perform this action when the component mounts.
