--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,14 +1,16 @@
-## **Getting Started with Semaphor**
+## Getting Started with Semaphor
 
 You can get started with Semaphor in three simple steps.
 
-### **Step 1: Sign Up and Log In**
+### Step 1: Sign Up and Log In
 
 1. **Visit the Login Page:** Navigate to [https://semaphor.cloud](https://semaphor.cloud/).
 2. **Enter Your Credentials:** Log in using your email and password.
 3. **Create a Project:** A project serves as a container for all your dashboards that share the same data.
 
-### **Step 2: Create a Connection**
+---
+
+### Step 2: Create a Connection
 
 1. **Navigate to Connections:** Find and click on the "Connections" tab in the projects section.
 2. **Add New Connection:** Click on either the "Connect Database" or “Connect API” button.
@@ -17,7 +19,9 @@ You can get started with Semaphor in three simple steps.
 5. **Test Connection:** Click on the "Test" button to verify everything is set up correctly.
 6. **Save Connection:** If the connection is successful, save it to link to your dashboards.
 
-### **Step 3: Generate Insights**
+---
+
+### Step 3: Generate Insights
 
 1. **Create a Dashboard:** Click on "Create Dashboard" in the projects section. A dashboard is a canvas for displaying your insights.
 2. **Add Card:** Each card represents a piece of insight, such as a chart or a table. Open the explorer view by clicking on the eye icon.
@@ -25,6 +29,8 @@ You can get started with Semaphor in three simple steps.
 4. **Analyze:** Ask questions of your data or write your own SQL, and pick the type of visualization (e.g., bar chart, line graph, pie chart) that best illustrates your data.
 5. **Customize Your Dashboard:** Modify your report by adding filters, sorting data, and adjusting the layout.
 6. **Save and Share:** Save your dashboard and share it with your team or integrate it into your application.
+
+---
 
 ### **Need Help?**
 
