--- a/pages/integrate/vue-integration.mdx
+++ b/pages/integrate/vue-integration.mdx
@@ -1,8 +1,8 @@
-## **Vue Integration**
+## Vue Integration
 
 This guide provides step-by-step instructions for integrating semaphor dashboard into your Vue app. In this example, we will use Vite to bootstrap our Vue application.
 
-### **1) Setup**
+### 1) Setup
 
 **a)** Create a new Vue app with Vite. Refer to the [documentation](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) for more details.
 
@@ -46,7 +46,9 @@ npm run dev
 
 At this point, you should have the boilerplate Vite app running at http://localhost:5173.
 
-### **2) Sempahor Component**
+---
+
+### 2) Sempahor Component
 
 To render Semaphor dashboard in your app, create the following components in the `src/components` directory
 
@@ -121,7 +123,9 @@ export class ReactConnector {
 }
 ```
 
-### **3) Render in your app**
+---
+
+### 3) Render in your app
 
 First, uncomment the boilerplate styles in `main.ts` like shown below.
 
@@ -153,7 +157,9 @@ onMounted(() => {
 </template>
 ```
 
-### **Key Considerations**
+---
+
+### Key Considerations
 
 - **Security Note:** Keep the `DASHBOARD_SECRET` secure and do not expose it in client-side code in production. This example is for demonstration purposes only. When deploying in production, obtain the authentication token from a secure, server-side environment.
 - **Fetching the AuthToken:** Before the dashboard can be displayed, an authentication token must be fetched. The `useEffect` hook is used to perform this action when the component mounts.
