--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -2,7 +2,7 @@
 
 You can get started with Semaphor in three simple steps.
 
-### Step 1: Sign Up and Log In
+### Step 1: Sign Up and Sign In
 
 1. **Visit the Login Page:** Navigate to [https://semaphor.cloud](https://semaphor.cloud/).
 2. **Enter Your Credentials:** Log in using your email and password.
