--- a/pages/concepts/filters.mdx
+++ b/pages/concepts/filters.mdx
@@ -154,13 +154,13 @@ ORDER BY city DESC LIMIT 50
 
 ### API Filters
 
-You can also use the handle-bar notation to modify your API connection. For example, the below URL:
+When using an API connection, you can use the filters in the SQL query as described above. However, you can also use handlebar notation to pass query parameters or replace certain parts of the URL based on the user filters. For example, consider the following API where you want to fetch the status of a todo ID based on the filter value.
 
 ```markdown filename="API Connection"
 https://jsonplaceholder.typicode.com/todos/{{ filters['id']['values'][0] }}
 ```
 
-would resolve to
+If the user selects 2 from top-level filter, the expression would resolve to:
 
 ```markdown filename="Filtered API"
 https://jsonplaceholder.typicode.com/todos/2
@@ -172,7 +172,7 @@ Now, if you want to provide a default value when no filter is present, you can u
 https://jsonplaceholder.typicode.com/todos/{{ filters.get('id', {}).get('values', [1])[0] }}
 ```
 
-This resolves to
+`.get('values', [1])[0]` part of the expression applies the default value condition, and the expression resolves to:
 
 ```markdown filename="Filtered API"
 https://jsonplaceholder.typicode.com/todos/1
